--- a/config/database.yml
+++ b/config/database.yml
@@ -13,8 +13,8 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: 5
-  username: root
-  password: 1234 
+  username: PARadioDeveloper
+  password: FourTwentyBl4ze1t
   socket: /var/run/mysqld/mysqld.sock
 
 development:
