--- a/config/database.yml
+++ b/config/database.yml
@@ -50,5 +50,6 @@ test:
 production:
   <<: *default
   database: PARadioCMS_production
+  host: 54.191.141.112
   username: PARadioCMS
   password: FourTwentyBl4ze1t
